--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -6,7 +6,8 @@ expanded:
 - configuracao-e-aquecimento
 - campanha-principal
 - bloco_b-modificadores-de-acesso
-tasks: {}
+tasks:
+  roupa: '{rate:100, study:2400}'
 flags:
   quests: 0
   tracks: 0
