--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -8,14 +8,15 @@ sources:
 - database: poo
   link: https://github.com/qxcodepoo/arcade/blob/master/Readme.md
   cache_path: C:\Users\almei\OneDrive\Documentos\Estudos_vitoria\poo-dd-cd-bloco-b-MariaVitoriadeAlmeidaFerreira\myrep\.tko\cache\poo.md
-  cache_timestamp: '2025-10-21 19:55:20'
+  cache_timestamp: '2025-10-21 21:24:09'
   filters:
   - acesso
   - simples
 expanded:
 - poo@campanha-principal
 - poo@bloco_b-agregação-simples
-tasks: {}
+tasks:
+  poo@motoca: '{rate:100}'
 flags:
   quests: 0
   tracks: 0
